# climate-rnn-api

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/: README.md  config.json
deployment/: Dockerfile  render.yaml
scripts/: prepare_hf_model.py  save_scaler.py  train_model.py  upload_to_hf.py
src/api/: app.py  routes.py  test_request.json
src/config/: settings.py
src/data/: schemas.py
src/model/: architecture.py  loader.py  predictor.py
