[project]
name = "climate-rnn-api"
version = "1.0.0"
description = "LSTM-based climate forecasting API for next-day temperature prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "torch>=2.8.0",
    "numpy>=2.4.0",
    "scikit-learn>=1.8.0",
    "huggingface-hub>=0.27.0",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.25.0",
]
training = [
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "protobuf>=3.20.0,<4.0.0",
    "pandas>=3.0.3",
    "ray[tune]>=2.44.0",
    "tqdm>=4.67.3",
]
